<resources>
    <string name="app_name">VideoCLub</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="region_image">Region</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_bluetooth_devices">Bluetooth Low Energy Devices</string>
    <string name="list_header">Nearby Devices:</string>
    <string name="scanning">Scanning...</string>
    <string name="btn_title">Scan Bluetooth Devices</string>
    <string name="open_settings">Open settings to set location permission</string>
    <string name="mac_id">MAC Id:</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>

    <!-- Base URLs -->
    <string name="api_base_url">http://api.msgnaa.info/</string>

    <!-- Content Descriptions -->
    <string name="home_icon">Home</string>
    <string name="search_icon">Search</string>
    <string name="channel_image">Channel</string>
    <string name="category_image">Category</string>
    <string name="back_button">Back</string>

    <string name="app_logo">App Logo</string>
    <string name="check_status">Check Status</string>
    <string name="device_id_placeholder">Device ID: Unknown</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="network_status">Network Status: %1$s</string>
    <string name="ip_address">IP Address: %1$s</string>
    <string name="mac_address">MAC Address: %1$s</string>

    <!-- Channel Video Player Activity -->
    <string name="no_data_found">No data found</string>
    <string name="back">Back</string>
    <string name="volume">Volume</string>
    <string name="buffering">Buffering…</string>
    <string name="player_error">Error playing video</string>

    <!-- ExoPlayer control descriptions -->
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_fastforward_description">Fast Forward</string>

    <!-- Cinerama Activity -->
    <string name="blockbuster_movies">Blockbuster Movies</string>
    <string name="search_hint">Search...</string>
    <string name="movie_thumbnail">Movie Thumbnail</string>
    <string name="loading">Loading...</string>
    <string name="no_movies_found">No movies found</string>
    <string name="error_loading_data">Error loading data</string>
    <color name="selected_text_color">#FFFFFF</color> <!-- White for selected text -->
    <color name="default_text_color">#AAAAAA</color>

    <!-- Home Detail Activity -->
    <string name="play_movie">Play Movie</string>
    <string name="movie_details">Movie Details</string>
    <string name="uploader">Uploader</string>

    <!-- Cloud Star Activity -->
    <string name="openstreet_map">Openstreet Map</string>
    <string name="google_map">Google Map</string>

    <!-- Video Player Activity -->
    <string name="start_recording">Start Recording</string>
    <string name="save_recording">Save Recording</string>

    <!-- Join Meeting Activity -->
    <string name="joining_meeting">Joining meeting...</string>
    <string name="meeting_error">Error joining meeting</string>

    <!-- Splash Activity -->
    <string name="app_version">Version %1$s</string>

    <!-- Coupon Verification -->
    <string name="have_code">Have any Code?</string>
    <string name="coupon_type">Coupon Type</string>
    <string name="serial_number">Serial Number</string>
    <string name="pin_number">Pin Number</string>
    <string name="verify">Verify</string>
    <string name="skip">Skip</string>
    <string name="fill_all_fields">Please fill all the fields</string>

    <!-- Login Screen -->
    <string name="login">Login</string>
    <string name="email">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="accept_terms">I accept terms and conditions of use</string>
    <string name="no_account">Don\'t have an Account Yet?</string>
    <string name="sign_up">Sign Up</string>

    <!-- Change Password Dialog -->
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="apply">Apply</string>


    <!-- Web View Activity -->
    <string name="loading_page">Loading page...</string>
    <string name="error_loading_page">Error loading page</string>

    <!-- Video Conference Activity -->
    <string name="join_video_conference">Join Video Conference</string>
    <string name="room_id">Room ID</string>
    <string name="enter_room_id">Enter room ID</string>
    <string name="join_meeting">Join Meeting</string>

    <!-- New Home Screen -->
    <string name="scroll">Scroll</string>
    <string name="under_construction">Under Construction</string>
    <string name="scroll_up">Scroll Up</string>
    <string name="scroll_down">Scroll Down</string>
    <string name="menu_item">Menu Item</string>
    <string name="refresh">REFRESH</string>
    <string name="loading_location">loading_location</string>
    <string name="loading_map">loading map\n</string>
    <string name="no_channel_url">no_channel_url</string>


    <!-- Add these to your existing strings.xml file -->

    <string name="cloud_star_title">Cloud Star</string>
    <string name="select_map_provider">Select Map Provider</string>

</resources>