<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="48dp"
    tools:context=".CheckStatusActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/app_logo"
                android:focusable="false"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:focusable="false"
                android:text="@string/check_status"
                android:textColor="@color/colorTextDark"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_image" />

            <View
                android:id="@+id/divider"
                android:layout_width="240dp"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status_title" />

            <TextView
                android:id="@+id/device_id_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:focusable="false"
                android:text="@string/device_id_placeholder"
                android:textColor="@color/colorTextLight"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <Button
                android:id="@+id/enable_bluetooth_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_background"
                android:focusable="true"
                android:nextFocusDown="@id/enable_bluetooth_button"
                android:padding="16dp"
                android:text="@string/enable_bluetooth"
                android:textColor="@color/colorTextLight"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/device_id_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>